# crucible

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  experiments.db  prompt-log.md  pyproject.toml
.cursor/rules/: prompt-logging.mdc
conf/: data_processing.yaml  full_pipeline.yaml
conf/defaults/: evaluation.yaml  finetuning.yaml  full_pipeline.yaml  serving.yaml
conf/experiments/: experiment_0_baseline.yaml  experiment_1_lora_r32_curated.yaml  experiment_2_qwen_chat.yaml
crucible/: __init__.py  config.py  pipeline.py  templates.py
crucible/data/: __init__.py  cleaning.py  config.py  formatting.py  loading.py  pipeline.py  splitting.py
crucible/evaluation/: config.py  evaluator.py  pipeline.py  protocol.py
crucible/evaluation/metrics/: bertscore.py  refusal.py  registry.py  rouge.py  similarity.py
crucible/guardrails/: __init__.py  config.py  constants.py  refusal.py  wrapper.py
crucible/serving/: __init__.py  app.py  config.py  loader.py  wsgi.py
crucible/tracking/: __init__.py  config.py  factory.py  protocol.py
crucible/tracking/backends/: __init__.py  sqlite_backend.py
crucible/training/: __init__.py  callbacks.py  config.py  model.py  pipeline.py  protocol.py
notebooks/: expt_0.ipynb  preprocessing.ipynb
outputs/experiment_0_baseline/: crucible_metadata.json  evaluation_results.json  training_log.jsonl
outputs/experiment_0_baseline/checkpoint-1/: adapter_config.json  adapter_model.safetensors  optimizer.pt  tokenizer.json  trainer_state.json
outputs/experiment_0_baseline/checkpoint-50/: README.md  adapter_config.json  adapter_model.safetensors  optimizer.pt  scaler.pt  tokenizer.json  trainer_state.json
tests/: conftest.py  test_version.py
tests/integration/: test_data_pipeline.py  test_evaluation.py  test_finetuning.py
tests/unit/: test_templates.py
tests/unit/data/: test_cleaning.py  test_config.py  test_formatting.py  test_loading.py  test_splitting.py
tests/unit/evaluation/: test_config.py  test_evaluator.py  test_metrics.py  test_protocol.py  test_refusal_metric.py
tests/unit/guardrails/: test_refusal_guardrail.py
tests/unit/serving/: __init__.py  test_app.py
tests/unit/tracking/: test_sqlite_tracker.py
(+3 files in other folders)
