[project]
name = "crucible"
version = "0.1.0"
description = "Fine-tuning SLMs for financial use cases"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"

[tool.poetry]
packages = [{ include = "crucible" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flytekit = "^1.15"
datasets = "^3.0"
pandas = "^2.2"
hydra-core = "^1.3"
omegaconf = "^2.3"
scikit-learn = "^1.6"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
sentence-transformers = "^5.2.3"
peft = "^0.18.1"
accelerate = "^1.13.0"
flask = "^3.0"
gunicorn = "^23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
pre-commit = "^4.0"
ruff = "^0.9"
mypy = "^1.14"
pandas-stubs = "^2.2"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = ["integration: tests that make external network calls"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["crucible.*", "tests.*"]
disallow_untyped_decorators = false
